<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clipToPadding="true"
        android:gravity="bottom"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:background="@drawable/shape_bottom_sheet"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:id="@+id/txt_Confirmation_title"
            style="@style/ContactDetailsTitle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/confirmation"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/txt_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_yes"
            style="@style/confirmationBtn"
            android:layout_width="@dimen/dp_130"
            android:layout_height="@dimen/dp_45"
            android:layout_margin="@dimen/dp_16"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@drawable/shape_confirmation_yes"
            android:gravity="center"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_no"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_Confirmation_title"
            app:srcCompat="@drawable/edit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_no"
            style="@style/confirmationBtn"
            android:layout_width="@dimen/dp_130"
            android:layout_height="@dimen/dp_45"
            android:layout_margin="@dimen/dp_16"
            android:layout_marginStart="35dp"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@drawable/shape_confirmation_yes"
            android:gravity="center"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="@id/txt_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_yes"
            app:layout_constraintTop_toTopOf="@id/txt_yes"
            app:srcCompat="@drawable/edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>