<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_view"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_margin="@dimen/dp_16"
            android:src="@drawable/image"
            android:tint="@color/detail_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_view"
            style="@style/ContactAction"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/view_media"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/img_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/img_view"
            app:layout_constraintTop_toTopOf="@id/img_view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_search"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_margin="@dimen/dp_16"
            android:src="@drawable/search_24"
            android:tint="@color/detail_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_view" />

        <TextView
            android:id="@+id/txt_search"
            style="@style/ContactAction"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/search_in_conversation"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/img_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/img_search"
            app:layout_constraintTop_toTopOf="@id/img_search" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_notification"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_margin="@dimen/dp_16"
            android:src="@drawable/notifications"
            android:tint="@color/detail_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_search" />

        <TextView
            android:id="@+id/txt_notification"
            style="@style/ContactAction"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/img_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/img_notification"
            app:layout_constraintTop_toTopOf="@id/img_notification" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>